--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,13 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/menu_sms"
-        android:title="پیامک‌ها"
-        android:icon="@drawable/ic_sms"
-        android:showAsAction="ifRoom" />
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_settings"
-        android:title="تنظیمات"
-        android:icon="@drawable/ic_settings"
-        android:showAsAction="ifRoom" />
+        android:id="@+id/action_add"
+        android:title="افزودن"
+        android:icon="@android:drawable/ic_input_add"
+        app:showAsAction="always" />
 </menu>
