--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,7 +21,7 @@
         <item name="android:editTextStyle">@style/Widget.EditText.Custom</item>
 
         <!-- فونت -->
-        <item name="android:fontFamily">@font/iran_sans</item>
+        <item name="android:fontFamily">@font/iransans</item>
         <item name="fontFamily">@font/iran_sans</item>
 
         <!-- رنگ وضعیت (status bar) -->
@@ -33,14 +33,14 @@
     <style name="Widget.Button.Custom" parent="Widget.MaterialComponents.Button">
         <item name="android:backgroundTint">@color/add_button_blue</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/iran_sans</item>
+        <item name="android:fontFamily">@font/iransans</item>
     </style>
 
     <!-- استایل فیلدهای متنی -->
     <style name="Widget.EditText.Custom" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="android:textColor">@color/black</item>
         <item name="android:hintTextColor">@color/gray</item>
-        <item name="android:fontFamily">@font/iran_sans</item>
+        <item name="android:fontFamily">@font/iransans</item>
     </style>
 
 </resources>
