--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,7 +38,7 @@
     <!-- استایل فیلدهای متنی -->
     <style name="Widget.EditText.Custom" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
         <item name="android:textColor">@color/black</item>
-        <item name="android:hintTextColor">@color/gray</item>
+        <item name="hintTextColor">@color/gray</item>
         <item name="fontFamily">@font/iran_sans</item>
     </style>
 
