--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,4 +34,9 @@
     <!-- رنگ‌های مکمل -->
     <color name="primary_light_blue">#4FC3F7</color>
     <color name="background_light">#FAFAFA</color>
+    <color name="toolbar_blue">#1976D2</color>
+<color name="toolbar_text">#FFFFFF</color>
+<color name="add_button_blue">#2196F3</color>
+<color name="table_text">#212121</color>
+
 </resources>
