--- a/app/src/main/res/menu/menu_transaction_item.xml
+++ b/app/src/main/res/menu/menu_transaction_item.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_edit"
         android:title="ویرایش"
         android:icon="@drawable/ic_edit"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_delete"
         android:title="حذف"
         android:icon="@drawable/ic_delete"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_move"
         android:title="جابجایی"
         android:icon="@drawable/ic_move"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_settings"
         android:title="تنظیمات"
         android:icon="@drawable/ic_settings"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
 
 </menu>
