--- a/app/src/main/res/menu/transaction_item_menu.xml
+++ b/app/src/main/res/menu/transaction_item_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/action_edit"
         android:title="ویرایش"
@@ -24,5 +25,4 @@
         android:title="حذف"
         android:icon="@drawable/ic_delete"
         app:showAsAction="never" />
-
 </menu>
