--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-
-    <!-- استایل‌های عمومی ویوها -->
-    <style name="TextViewDefault" parent="TextAppearance.Material3.BodyMedium">
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:fontFamily">@font/vazir</item>
-    </style>
-
-    <style name="EditTextDefault" parent="Widget.Material3.TextInputEditText.OutlinedBox">
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:fontFamily">@font/vazir</item>
-    </style>
-
-</resources>
+<style name="EditTextDefault" parent="@android:style/Widget.EditText">
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:fontFamily">@font/vazir</item>
+    <item name="android:backgroundTint">#2196F3</item>
+</style>
