--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,48 @@
-<style name="EditTextDefault" parent="@android:style/Widget.EditText">
-    <item name="android:textColor">#FFFFFF</item>
-    <item name="android:fontFamily">@font/vazir</item>
-    <item name="android:backgroundTint">#2196F3</item>
-</style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <!-- تم اصلی برنامه -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:windowBackground">@color/app_background</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:buttonStyle">@style/ButtonDefault</item>
+        <item name="android:editTextStyle">@style/EditTextDefault</item>
+        <item name="android:textViewStyle">@style/TextViewDefault</item>
+        <item name="colorPrimary">@color/toolbar_blue</item>
+        <item name="colorPrimaryDark">@color/header_blue</item>
+        <item name="colorAccent">@color/toolbar_blue</item>
+    </style>
+
+    <!-- استایل عمومی TextView -->
+    <style name="TextViewDefault" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <!-- استایل عمومی EditText -->
+    <style name="EditTextDefault" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:hintTextColor">#BBBBBB</item>
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:backgroundTint">@color/toolbar_blue</item>
+    </style>
+
+    <!-- استایل عمومی Button -->
+    <style name="ButtonDefault" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/toolbar_blue</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
+    <!-- استایل Spinner (اختیاری) -->
+    <style name="SpinnerDefault" parent="Widget.AppCompat.Spinner">
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">@drawable/spinner_background</item>
+    </style>
+
+</resources>
