--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,52 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- 🔵 آبی روشن -->
-    <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">#1976D2</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
-        <item name="colorSecondary">#0D47A1</item>
-        <item name="android:colorBackground">#0E1116</item>
-        <item name="android:statusBarColor">#000000</item>
-        <item name="android:navigationBarColor">#000000</item>
-        <item name="android:windowLightStatusBar">false</item>
-        <item name="android:fontFamily">@font/vazir</item>
+    <!-- 🌙 تم شب برای حالت تیره برنامه حساب -->
+    <style name="Theme.Hesab" parent="Theme.AppCompat.NoActionBar">
+        <!-- رنگ‌های اصلی تیره‌تر -->
+        <item name="colorPrimary">@color/toolbar_blue_dark</item>
+        <item name="colorPrimaryDark">@color/toolbar_blue_dark</item>
+        <item name="colorAccent">@color/add_button_blue</item>
+
+        <!-- رنگ متن و پس‌زمینه -->
+        <item name="android:windowBackground">@color/app_background_dark</item>
+        <item name="android:textColor">@color/table_text_dark</item>
+
+        <!-- فونت -->
+        <item name="android:fontFamily">@font/iran_sans</item>
+
+        <!-- رنگ استاتوس‌بار و نوار پایین -->
+        <item name="android:statusBarColor">@color/toolbar_blue_dark</item>
+        <item name="android:navigationBarColor">@color/toolbar_blue_dark</item>
+
+        <!-- دکمه‌ها و فیلدهای ورودی -->
+        <item name="android:buttonStyle">@style/Widget.Button.Custom.Night</item>
+        <item name="android:editTextStyle">@style/Widget.EditText.Custom.Night</item>
     </style>
 
-    <!-- 💚 سبز نرم -->
-    <style name="Theme.Hesab.SoftGreen" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">#2E7D32</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
-        <item name="colorSecondary">#1B5E20</item>
-        <item name="android:colorBackground">#0E1110</item>
-        <item name="android:statusBarColor">#000000</item>
-        <item name="android:navigationBarColor">#000000</item>
-        <item name="android:windowLightStatusBar">false</item>
-        <item name="android:fontFamily">@font/iransans</item>
+    <!-- 💠 استایل دکمه‌ها در حالت شب -->
+    <style name="Widget.Button.Custom.Night" parent="Widget.AppCompat.Button">
+        <item name="android:backgroundTint">@color/add_button_blue</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/iran_sans</item>
     </style>
 
-    <!-- ⚫ تیره کامل -->
-    <style name="Theme.Hesab.Dark" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">#000000</item>
-        <item name="colorOnPrimary">#FFFFFF</item>
-        <item name="colorSecondary">#333333</item>
-        <item name="android:colorBackground">#000000</item>
-        <item name="android:statusBarColor">#000000</item>
-        <item name="android:navigationBarColor">#000000</item>
-        <item name="android:windowLightStatusBar">false</item>
-        <item name="android:fontFamily">@font/diana</item>
-    </style>
-
-    <!-- ⚪ روشن تیره (Light در حالت Night) -->
-    <style name="Theme.Hesab.Light" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="colorPrimary">#CCCCCC</item>
-        <item name="colorOnPrimary">#000000</item>
-        <item name="colorSecondary">#B0BEC5</item>
-        <item name="android:colorBackground">#121212</item>
-        <item name="android:statusBarColor">#000000</item>
-        <item name="android:navigationBarColor">#000000</item>
-        <item name="android:windowLightStatusBar">false</item>
-        <item name="android:fontFamily">@font/vazir</item>
+    <!-- ✏️ استایل فیلد متنی در حالت شب -->
+    <style name="Widget.EditText.Custom.Night" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:hintTextColor">@color/gray</item>
+        <item name="android:fontFamily">@font/iran_sans</item>
     </style>
 
 </resources>
