--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,5 +38,8 @@
 <color name="toolbar_text">#FFFFFF</color>
 <color name="add_button_blue">#2196F3</color>
 <color name="table_text">#212121</color>
+<color name="toolbar_blue_dark">#0A2942</color>
+<color name="app_background_dark">#0B0C10</color>
+<color name="table_text_dark">#DADADA</color>
 
 </resources>
