--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -34,7 +34,7 @@
     <!-- ✏️ استایل فیلد متنی در حالت شب -->
     <style name="Widget.EditText.Custom.Night" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">@color/white</item>
-        <item name="android:hintTextColor">@color/gray</item>
+        <item name="android:textColorHint">@color/gray</item>
         <item name="android:fontFamily">@font/iran_sans</item>
     </style>
 
