--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- رنگ‌های پایه -->
     <color name="white">#FFFFFF</color>
@@ -35,11 +36,15 @@
     <color name="primary_light_blue">#4FC3F7</color>
     <color name="background_light">#FAFAFA</color>
     <color name="toolbar_blue">#1976D2</color>
-<color name="toolbar_text">#FFFFFF</color>
-<color name="add_button_blue">#2196F3</color>
-<color name="table_text">#212121</color>
-<color name="toolbar_blue_dark">#0A2942</color>
-<color name="app_background_dark">#0B0C10</color>
-<color name="table_text_dark">#DADADA</color>
+    <color name="toolbar_text">#FFFFFF</color>
+    <color name="add_button_blue">#2196F3</color>
+    <color name="table_text">#212121</color>
+    <color name="toolbar_blue_dark">#0A2942</color>
+    <color name="app_background_dark">#0B0C10</color>
+    <color name="table_text_dark">#DADADA</color>
 
+    <!-- ✅ رنگ‌های جدید برای تم آبی صفحه اصلی -->
+    <color name="dark_blue">#1565C0</color>
+    <color name="light_blue">#42A5F5</color>
+    <color name="background_light_blue">#E3F2FD</color>
 </resources>
